objects/Product2.object
<CustomObject>
    <fields>
        <fullName>Accounting_Bin_Quantity_Count__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this box if items listed here should count toward the quantity for the accounting bin. For example ARM license count toward the Subscriptions count, but other Subscriptions products do not.</description>
        <inlineHelpText>Check this box if items listed here should count toward the quantity for the accounting bin. For example ARM license count toward the Subscriptions count, but other Subscriptions products do not.</inlineHelpText>
        <label>Accounting Bin Quantity Count</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Accounting_Bin__c</fullName>
        <label>Accounting Bin</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>CodeScan</fullName>
                </value>
                <value>
                    <fullName>Implementation Revenue</fullName>
                </value>
                <value>
                    <fullName>Record Migrator</fullName>
                </value>
                <value>
                    <fullName>Subscriptions</fullName>
                </value>
                <value>
                    <fullName>Support</fullName>
                </value>
                <value>
                    <fullName>Vault</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <externalId>true</externalId>
        <label>AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CodeScan_Org_Id__c</fullName>
        <externalId>true</externalId>
        <label>CodeScan Org Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lifecycle__c</fullName>
        <label>Lifecycle</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>End-of-Life</fullName>
                </value>
                <value>
                    <fullName>End-of-Sale</fullName>
                </value>
                <value>
                    <fullName>General-Availability</fullName>
                </value>
                <value>
                    <fullName>Limited-Availability</fullName>
                </value>
                <value>
                    <fullName>Market-Testing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Category__c</fullName>
        <label>Product Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>DataOps</fullName>
                </value>
                <value>
                    <fullName>DevSecOps</fullName>
                </value>
                <value>
                    <fullName>Discounts</fullName>
                </value>
                <value>
                    <fullName>Foundation</fullName>
                </value>
                <value>
                    <fullName>Platform</fullName>
                </value>
                <value>
                    <fullName>Premium Support &amp; Professional Services</fullName>
                </value>
                <value>
                    <fullName>Professional Services</fullName>
                </value>
                <value>
                    <fullName>Support &amp; Professional Services</fullName>
                </value>
                <value>
                    <fullName>Support Services</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <label>Product Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Recurring</fullName>
                </value>
                <value>
                    <fullName>Non-recurring</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SOW__c</fullName>
        <description>Link to statement of work. Full list at https://www.autorabit.com/company-sow/</description>
        <inlineHelpText>Link to standard SOW if there is one. Full List at https://www.autorabit.com/company-sow/</inlineHelpText>
        <label>SOW</label>
        <type>Url</type>
    </fields>
    <listViews>
        <fullName>Active_Products</fullName>
        <columns>PRODUCT2.ACTIVE</columns>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.DESCRIPTION</columns>
        <columns>Lifecycle__c</columns>
        <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
        <columns>PRODUCT2.FAMILY</columns>
        <columns>Product_Type__c</columns>
        <columns>Accounting_Bin__c</columns>
        <columns>Product_Category__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PRODUCT2.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Products</label>
    </listViews>
    <listViews>
        <fullName>AllProducts</fullName>
        <columns>PRODUCT2.ACTIVE</columns>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.DESCRIPTION</columns>
        <columns>Product_Category__c</columns>
        <columns>PRODUCT2.FAMILY</columns>
        <columns>Product_Type__c</columns>
        <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
        <columns>PRODUCT2.CREATED_DATE</columns>
        <columns>Accounting_Bin__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Products</label>
    </listViews>
    <sharingModel>Read</sharingModel>
</CustomObject>